feat(api-gateway): implement role-based authorization (RBAC)
- Extract role claim from JWT and set as GrantedAuthority in security context
- Added extractRole() to JwtService
- SecurityConfig now enforces route-level access control:
  PROVIDER: POST/DELETE on /api/offers/** and /api/resources/**
  CLIENT: POST on /api/bookings/**
  authenticated: GET on catalog and bookings
- Replaced MDC with Reactor Context for correlation ID propagation